<resources>
    <string name="app_name">CRogue</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="EMail">E-mail</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Date">Date</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Password</string>
    <string name="BtnLogin">LOGIN</string>
    <string name="play">PLAY</string>
    <string name="score">SCORE</string>
    <string name="credits">CREDITS</string>
    <string name="close_session">CLOSE SESSION</string>
    <string name="socres">SCORES</string>
    <string name="uid">--</string>
    <string name="user_email">--</string>
    <string name="user_name">--</string>
    <string name="user_score">--</string>
    <string name="bt_menu">MENU</string>
    <string name="Creditstxt">This game was  created by:</string>
    <string name="judit">Judit Closa Cancho</string>
    <string name="khadija">Khadija El Hady Ouhda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>