<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- Text La meva puntuació -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myScoretxt"
            android:text="@string/score"
            android:textSize="30sp"
            android:gravity="center"
            android:textAlignment="center"/>
        <!-- contingut puntuació -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scores"
            android:textSize="20sp"
            android:text="@string/user_score"
            android:gravity="center"
            android:textAlignment="center"/>
        <!-- Imatge alien -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/logoImage"
            android:src="@drawable/crouge_logo" />
        <!-- uid -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uid"
            android:textSize="20sp"
            android:text="@string/uid"
            android:gravity="center"
            android:textAlignment="center"/>
        <!-- correu -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textSize="20sp"
            android:text="@string/user_email"
            android:gravity="center"
            android:textAlignment="center"/>

        <!-- nom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textSize="20sp"
            android:text="@string/user_name"
            android:gravity="center"
            android:textAlignment="center"/>
        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"

            />
        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/scoresBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/socres"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"
            />
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"
            />
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/closeSessionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_session"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>