<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- Imatge LOGO -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="300dp"
            android:layout_height="180dp"

            android:id="@+id/logoImage"
            android:src="@drawable/segundologo" />
        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/EMail"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <!-- forcem que la entrada sigui un correu electronic -->

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />
        <!-- forcem que la entrada sigui un password -->


        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"/>

        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Date"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Register"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="@color/white"
            />
    </LinearLayout>
</RelativeLayout>