<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits"
    android:background="#050505">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- Imatge LOGO -->

        <TextView
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="IES CASTELLET"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImage"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            app:srcCompat="@drawable/logoiescastellet" />

        <TextView
            android:id="@+id/Creditstxt"
            android:layout_width="312dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/Creditstxt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/judit"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/judit"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/khadija"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/khadija"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_manu"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:background="@drawable/mybutton"
            android:text="@string/bt_menu"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>